[tool.poetry]
name = "langserve"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.5"
langgraph = "^0.1.6"
ipywidgets = "^8.1.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
langchain-anthropic = "^0.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
